<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.oscarthorsson.remember.HomeActivity">

    <Button
        android:id="@+id/newReminders"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="185dp"
        android:background="@drawable/round_button"
        android:fontFamily="monospace"
        android:onClick="onClickNewRem"
        android:text="@string/add_new_remider"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/savedReminders"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="185dp"
        android:background="@drawable/round_button"
        android:fontFamily="monospace"
        android:onClick="onClickSavedReminders"
        android:text="@string/saved_reminders"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/settings"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="315dp"
        android:background="@drawable/round_button"
        android:fontFamily="monospace"
        android:onClick="onClickSettings"
        android:text="@string/settings"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background_home" />

</android.support.constraint.ConstraintLayout>
